# LARYBench

./: README.md  env.sh  index.html  pyproject.toml  requirements.txt
classification/: __init__.py
classification/configs/eval/vitl/: manipulation.yaml
classification/evals/: main.py  main_distributed.py  scaffold.py
classification/evals/video_classification_frozen/: eval.py  utils.py
classification/evals/video_classification_frozen/modelcustom/: vit_encoder_multiclip.py  vit_encoder_multiclip_multilevel.py
classification/src/datasets/: data_manager.py  video_dataset.py
classification/src/datasets/utils/: dataloader.py  utils.py  weighted_sampler.py  worker_init_fn.py
classification/src/models/: ac_predictor.py  attentive_pooler.py  predictor.py  vision_transformer.py
classification/src/utils/: checkpoint_loader.py  distributed.py
data/: agibotbeta_metadata_unseen.csv  calvin_metadata_val.csv  libero_metadata_val.csv  robocoin_metadata_unseen.csv  val_la_calvin_5_dinov2.csv  vlabench_15_metadata_val.csv  vlabench_30_metadata_train.csv  vlabench_30_metadata_val.csv
get_latent_action/: __init__.py  dynamics.py  get_indices.py  get_latent_action.py  get_latent_action_img.py  get_latent_action_img_libero.py  sampler.py  split_train_val.py  tokenizer.py
get_latent_action/models/flux2/: pyproject.toml
get_latent_action/models/flux2/scripts/: cli.py
get_latent_action/models/laq_model/: __init__.py  data.py  laq_trainer.py  laq_trainer_feature.py  latent_action_quantization.py  latent_action_quantization_dinov2_feature.py  latent_action_quantization_dinov3_feature.py  latent_action_quantization_magvit2.py  latent_action_quantization_siglipv2_feature.py  nsvq.py  nsvq_adapted.py
get_latent_action/models/lavit_tokenizer/: modeling_visual_tokenzier.py
get_latent_action/models/magvit2/: improved_model.py  lfqgan_pretrain.py
get_latent_action/models/magvit_torch/: LFQ.py  enc_casualcnn.py  model_utils.py
get_latent_action/models/univla/: main.py
get_latent_action/models/wan2_2/: requirements.txt  requirements_animate.txt
lary/: __init__.py  cli.py  config.py  extract.py  path_resolver.py
regression/: __init__.py  dit.py  main.py
utils/: __init__.py  check_dataset_integrity.py  compute_robot_action_stats.py  model_utils.py  prepare_relative_actions.py  prepare_ssv2_egodex.py
(+28 files in other folders)
