[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lary"
version = "0.1.0"
description = "LARY - Latent Action Representation Learning Library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LARY Team"}
]
keywords = ["latent action", "robot learning", "representation learning", "video understanding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "einops>=0.6.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "scikit-image>=0.21.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "prettytable>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
wandb = [
    "wandb>=0.15.0",
]
all = [
    "lary[dev,wandb]",
]

[project.scripts]
lary = "lary.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/LARY"
Documentation = "https://github.com/your-org/LARY#readme"
Repository = "https://github.com/your-org/LARY"

[tool.setuptools.packages.find]
include = ["lary*", "classification*", "regression*", "get_latent_action*", "data_process*", "utils*"]

[tool.setuptools.package-data]
lary = ["py.typed"]

[tool.black]
line-length = 119
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["lary", "classification", "regression", "get_latent_action", "data_process", "utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
